# anyfile

./: .gitattributes  .gitignore  .gitmodules  Brewfile  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  clangd.yml  docker.yml  release.yml
docker/linux-builder/: Dockerfile
docs/: macos-portability-report.md
linux/: anyfile.desktop
scripts/: build_appimage.sh  build_linux.sh  build_macos.sh  build_windows.ps1  sign_bundle.sh
src/cli/: ArgParser.h  CMakeLists.txt  main.cpp
src/core/: ArchiveConverter.h  CMakeLists.txt  DataConverter.h  Dispatcher.h  DocumentConverter.h  FormatRegistry.h  MediaConverter.h  ModelConverter.h  PathValidator.h  PdfRenderer.h  Process.h  Subprocess.h  ToolPaths.h  Types.h
src/gui/: CMakeLists.txt  ConverterBridge.h  main_gui.cpp
src/gui/qml/: AdvancedPanel.qml  AppScrollBar.qml  DropZone.qml  FieldDropdown.qml  FilePanel.qml  FormatBrowser.qml  HeaderBar.qml  HeaderButton.qml  Main.qml  OutputZone.qml  ProgressBar2.qml  ResultPanel.qml  TintedIcon.qml  ToolTip.qml
src/gui/resources/: app.rc  gui.qrc
src/gui/resources/icons/: app.icns
tests/: CMakeLists.txt  test_all.sh
tests/archives/: test.7z  test.bz2  test.lz4  test.lzma  test.rar  test.tgz  test.txz  test.zst
tests/audio copy/: test.flac
tests/data/: test.json  test.toml  test.xml  test.yaml  test_back.json
tests/documents/: test.html  test.md  test.ods  test.txt  test_from_html.docx  test_html.docx  test_md.docx  test_md.odt
tests/ebooks/: test.azw3  test.djvu  test.fb2  test_back.epub  test_from_azw3.epub
tests/test_output/archives/: out.7z  out.bz2  out.lz4  out.lzma  out.tar  out.tgz  out.txz  out.zst
tests/test_output/archives/seed_dir/: hello.txt
tests/test_output/audio/: out.aac  out.flac  out.opus
tests/test_output/data/: from_csv.json  from_csv.tsv  from_csv.yaml  from_env.json  from_env.toml  from_ini.json  from_ini.yaml  from_xml.json  from_xml.yaml  from_yaml.csv  from_yaml.xml  out.env  out.ini  people.json  seed.csv  seed.env  seed.ini  seed.json  seed.toml  seed.xml  seed.yaml  yaml_debug.json
tests/test_output/documents/: from_csv.ods  from_csv.xlsx  from_docx.odt  from_docx.rtf  from_docx.txt  from_html.docx  from_html.odt  from_md.docx  from_md.html  from_md.odt  from_ods.xlsx  from_odt.docx  from_pptx.odp  from_txt.docx  from_txt.html  from_txt.odt  from_xlsx.csv  from_xlsx.ods  seed.docx  seed.html  seed.md  seed.odt  seed.pptx  seed.txt  seed.xlsx
tests/test_output/ebooks/: from_mobi.azw3  from_mobi.epub  out.azw3  out.mobi  seed.mobi
tests/test_output/images/: out.avif  out.tiff
tests/test_output/models/: from_fbx.glb  from_fbx.mtl  from_fbx.stl  from_glb.mtl  from_stl.glb  out.dae  out.glb  out.gltf  out.ply  out.stl  seed.fbx
tests/unit/: CMakeLists.txt  test_dispatcher.cpp  test_format_registry.cpp  test_process.cpp
